Bug #41214 Incorrectly handled node-failure could lead to api-handling not completing
Submitted: 3 Dec 2008 19:41 Modified: 4 Dec 2008 7:32
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[3 Dec 2008 19:41] Jonas Oreland
Description:
If a transaction was aborted during node-failure handling
it could rarely "forget" to return a commit ack marker,
this left the commit ack marker in a inconsistent state
which could lead to api-failure handling later not completing

How to repeat:
testNodeRestart -n NR_Hammer -r 5 T1
(new testcase)

Suggested fix:
.
[3 Dec 2008 19:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60529

2760 Jonas Oreland	2008-12-03
      ndb - bug#41214 - incorrectly handled commit ack marker
        during TC-take-over could lead to subsequent api-failure-handling
        not completing
[3 Dec 2008 19:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60530

2761 Jonas Oreland	2008-12-03
      ndb - bug#41214 - incorrectly handled commit ack marker
        during TC-take-over could lead to subsequent api-failure-handling
        not completing
[3 Dec 2008 19:53] Bugs System
Pushed into 5.1.30-ndb-6.3.20  (revid:jonas@mysql.com-20081203194454-co2ez9yyg5cyer4t)
(version source revid:jonas@mysql.com-20081203194824-lckj238o7wronrm4) (pib:5)
[3 Dec 2008 19:55] Bugs System
Pushed into 5.1.30-ndb-6.2.17  (revid:jonas@mysql.com-20081203194454-co2ez9yyg5cyer4t)
(version source revid:jonas@mysql.com-20081203194454-co2ez9yyg5cyer4t) (pib:5)
[3 Dec 2008 20:03] Bugs System
Pushed into 5.1.30-ndb-6.4.0  (revid:jonas@mysql.com-20081203194454-co2ez9yyg5cyer4t)
(version source revid:jonas@mysql.com-20081203195133-nime1xk10b5xwf18) (pib:5)
[4 Dec 2008 7:32] Jon Stephens
Documented fix in the NDB-6.2.17 and NDB-6.3.20 changelogs as follows:

        If a transaction was aborted during the handling of a data node
        failure, this could lead to the later handling of an API node
        failure not being completed.
[12 Dec 2008 23:29] Bugs System
Pushed into 6.0.9-alpha  (revid:jonas@mysql.com-20081203194454-co2ez9yyg5cyer4t) (version
source revid:tomas.ulin@sun.com-20081209185954-9svcixh2p5hsfi6w) (pib:5)