ndb - bug#41214 - incorrectly handled commit ack marker   during TC-take-over could lead to subsequent api-failure-handling   not completing